# openproject-mcp

./: .gitignore  .mcp.json.example  CHANGELOG.md  LICENSE  README.md  configure_mcp.py  get.ps1  get.sh  pyproject.toml  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
docs/: architecture.md  claude.md  codex.md  github.md  tools.md
src/openproject_mcp/: __init__.py  client.py  config.py  models.py  server.py  tools.py
tests/: test_client.py  test_config.py  test_registry.py  test_server.py  test_tools.py
tests/fixtures/: spec.md
tests/integration/: conftest.py  test_boards.py  test_memberships.py  test_meta.py  test_news.py  test_projects.py  test_time_entries.py  test_versions.py  test_work_packages.py
